--- a/Assignment_2_S1_Release/nbproject/project.properties
+++ b/Assignment_2_S1_Release/nbproject/project.properties
@@ -67,7 +67,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=Assignment_2_S1_Release
-main.class=Question_2.NoiseRemoving
+main.class=Question_1.MemoApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
